<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MenuActivity">

    <TextView
        android:paddingTop="70dp"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="150dp"
        android:text="@string/label_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <Button
        android:id="@+id/btnCreateAppointment"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_login_button"
        android:drawableEnd="@drawable/baseline_add_circle"
        style="@style/MenuButton"
        android:text="@string/button_appointment" />


    <Button
        android:id="@+id/btnMyAppointment"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_login_button"
        android:drawableEnd="@drawable/baseline_calendar"
        style="@style/MenuButton"
        android:text="@string/button_my_appointments" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:background="@drawable/shape_login_button"
        android:drawableEnd="@drawable/ic_logout_off"
        style="@style/MenuButton"
        android:text="@string/button_log_out" />


</LinearLayout>