<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".CreateAppointmentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_horizontal"
        android:paddingTop="70dp"
        android:text="@string/label_create_appointment"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="20dp"
        app:contentPadding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_description"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_deporte"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spinnerDeportes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_type"
                android:textColor="@color/black" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <RadioButton
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type1" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type2" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type3" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type4" />
            </RadioGroup>

            <Button
                android:id="@+id/btnNext"
                style="@style/MenuButton"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_login_button"
                android:drawableEnd="@drawable/baseline_navigate_next"
                android:text="@string/button_netx" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardBackgroundColor="@color/light_blue"
        app:cardCornerRadius="20dp"
        app:contentPadding="12dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_cancha"
                    android:textColor="@color/black" />

                <Spinner
                    android:id="@+id/spinnerCanchas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/label_schedule_date"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etScheduleDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="date"
                    android:maxLines="1"
                    android:onClick="onClickScheduleDate" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/radioGroupLeft"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 PM"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 PM"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/radioGroupRight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 PM"
                            android:textColor="@color/black" />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8:00 PM"
                            android:textColor="@color/black" />

                    </LinearLayout>


                </LinearLayout>


                <Button
                    android:id="@+id/btnConfirmAppointment"
                    style="@style/MenuButton"
                    android:layout_width="match_parent"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/shape_login_button"
                    android:drawableEnd="@drawable/baseline_check"
                    android:text="@string/button_confirm" />

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.cardview.widget.CardView>


</LinearLayout>