<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:id="@+id/Header"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:src="@drawable/logo_app" />

    </RelativeLayout>


    <RelativeLayout
        app:layout_constraintTop_toBottomOf="@+id/Header"
        android:layout_width="220dp"
        android:layout_height="520dp"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/shape_right_panel"/>



    <LinearLayout
        android:id="@+id/LLloginPanel"
        app:layout_constraintTop_toBottomOf="@+id/Header"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:background="@drawable/shape_login_panel"
        android:paddingTop="70dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_height="400dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_name" />

        <EditText
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_email" />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/label_password" />

        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/LLloginPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_login_button"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:text="@string/button_register" />

    <TextView
        android:textColor="@color/white"
        android:gravity="right"
        android:layout_marginRight="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LLloginPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvGoToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_go_to_login" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>